# IMA_Plotter

./: README.md  main.py  processed_data.csv  pyproject.toml
ima_plotter/: __init__.py  loader.py  plotter.py  transformer.py  utils.py  widgets.py
notebooks/: demo.ipynb  interactive_plotter.ipynb
sample_data/: Exp1-on-off-field-summary_EX1A.xlsx  Exp1-on-off-field-summary_EX1B.xlsx  Exp1-on-off-field-summary_EX1C.xlsx  Exp1-on-off-field-summary_EX1D.xlsx  Exp1-on-off-field-summary_REF.xlsx
tests/: test_loader.py  test_plotter.py  test_transformer.py
